@@ -3,6 +3,11 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2010-12-13 (CVS):
+    * snd_dma.c (S_FileExtension): Add new function which returns the given
+      sound file's extension including the dot, or NULL.
+    * q_sound.h (S_FileExtension): Add prototype for the new function.
+
 2010-12-11 (CVS):
     * cross defs: Add ranlib among the target tools.
 
